checkpolicy/tests/negative/bad_module_line.te
module bad module name 1.0 garbage;

require {
	type foo_t;
}
